# sbrs-neo

./: README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js
.github/workflows/: release.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.afdesign  icon.icns
src-tauri/src/: main.rs
src/components/: SoundBox.svelte
src/data/: SoundInfo.ts
