[package]
name = "sbrs-neo"
version = "0.1.0"
description = "SoundBoard toy project with Tauri"
authors = ["mikee.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = [ "dialog-open", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.17.1"
anyhow = "1.0.71"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
